<resources>
    <string name="app_name">WeShare</string>
    <string name="action_settings">Settings</string>
    <string name="action_share_app">Share App with Bluetooth</string>
    <string name="action_exit">Exit</string>
    <string name="action_rate">Rate us</string>
    <string name="action_about">About</string>
    <string name="slogan">Sharing is caring</string>
    <string name="action_storage">Storage preferences</string>
    <string name="action_tc">Transfer channel</string>
    <string name="action_stop_hotspot">Prevent hotspot data</string>
    <string name="history">History will be displayed here.</string>
    <string name="receive">Receive-File will take place here.</string>
    <string name="send">Send-File will occur here.</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="send_options">
        <item>All files</item>
        <item>Images</item>
        <item>Music</item>
        <item>Videos</item>
        <item>Apps</item>
        <item>Documents</item>
    </string-array>

    <string-array name="count">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>

    <array name="icons">
        <item>@drawable/folder</item>
        <item>@drawable/vid_gnb</item>
        <item>@drawable/icon_musik</item>
        <item>@drawable/vid_red</item>
        <item>@drawable/appo</item>
        <item>@drawable/nice_doc</item>
    </array>
</resources>
