<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.connxion.pleaseshare.MainActivity">



    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share_app"
        app:showAsAction="never"
        android:icon="@drawable/ic_bluetooth_black"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_settings_black"/>

    <item
        android:id="@+id/action_rate_us"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_tag_faces_black"/>


    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:icon="@drawable/ic_help_black"/>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"
        android:icon="@drawable/ic_cancel_black"/>
</menu>
